--- a/battle-21/src/main/resources/log4j.properties
+++ b/battle-21/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # LOG4J配置
 log4j.rootCategory=INFO, stdout, file, errorfile
-log4j.category.com.didispace=${logging.level.com.battle}, didifile
+log4j.category.com.battle=${logging.level.com.battle}, didifile
 log4j.logger.error=errorfile
 
 # 控制台输出
