--- a/battle-30/pom.xml
+++ b/battle-30/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.battle</groupId>
-	<artifactId>battle</artifactId>
+	<artifactId>battle-30</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
